foreach内の記述について修正 射影の項目を削除 private void Item_PropertyChangedのメソッドを削除 チェックボックスのプロパティについて修正

--- a/TodoApp.Cliant/Views/MainWindow.xaml
+++ b/TodoApp.Cliant/Views/MainWindow.xaml
@@ -45,6 +45,8 @@
                         <DataTemplate>
                             <CheckBox
                                 IsChecked="{Binding IsCompleted,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                Command="{Binding DataContext.ToggleCompleteCommand, RelativeSource={RelativeSource AncestorType=Window}}"
+                                CommandParameter="{Binding}"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"/>
                         </DataTemplate>
